# PhysComp

./: CMakeLists.txt  README.md
examples/: unicorn_rigid_ipc.json
examples/e547b70f8bb549e3ad5cea9a4eed800d/: inverse_opt_init.veg  opt.veg  opt_rest.veg  static_eq_debug.veg
examples/unicorn/: make_it_stand_init.veg  make_it_stand_init_flattened.veg  stand_opt.veg  stand_opt_rest.veg
scripts/: test.py
src/: physcomp_c.cpp  physcomp_c.h
src/c/: CMakeLists.txt  pgo_c.symbol.txt  physcomp_c.cpp  physcomp_c.h  physcomp_c.version
src/core/: physcomp.cpp  physcomp.h
src/python/pyphyscomp/: CMakeLists.txt  pyphyscomp.cpp
